<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:layout_gravity="center"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/vetorLogo"
        android:layout_width="wrap_content"
        android:layout_height="179dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="50dp"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/loginTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/usuario"
        android:textAlignment="center"
        android:textStyle="bold"
        android:background="@drawable/campos"
        android:padding="15dp"

        />

    <EditText
        android:id="@+id/senhaTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginTxt"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/senha"
        android:textAlignment="center"
        android:textStyle="bold"
        android:inputType="textPassword"
        android:background="@drawable/campos"
        android:padding="15dp"

        />

    <Button
        android:id="@+id/btEntrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/senhaTxt"
        android:layout_marginStart="158dp"
        android:layout_marginTop="50dp"
        android:text="@string/login" />


</RelativeLayout>